--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <span>A</span>
         <span>L</span>
         <span>O</span>
+        <span>I</span>
         <span>N</span>
         <span>D</span>
         <span>R</span>
         <span>I</span>
-        <span>!</span>
         <span>!</span>
     </div>
     <div class="description">
